--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,24 @@
-<nav class="navbar navabr-light" style="background-color: rgb(28, 160, 189)">
+<nav class="navbar navbar-default" style="background-color: rgba(0, 232, 255, 0.28)">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"> UniMe </a>
+      <ul>
+        <a href="#" class="navbar-brand"> UniMe </a>
+        <a href="#" class="btn btn-info btn-lg">
+          <span class="glyphicon-plus"></span>
+        </a>
+      </ul>
     </div>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" role="button"> Manage <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#"> Profile </a></li>
+          <li><a href="#"> Settings </a></li>
+          <li><a href="#"> Sign Out </a></li>
+        </ul>
+      </li>
+    </ul>
+
   </div>
 </nav>
