--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-3">
-    <div class="container">
+  <div class="container-fluid">
+    <div class="center">
       <h3> Assignment List </h3>
       <hr>
-      <input type="text">
+      <input type="text" class="form-control"[(ngModel)]="taskName_1">
       <hr>
-      <input type="text">
+      <input type="text" class="form-control" [(ngModel)]="taskName_2">
     </div>
   </div>
 </div>
