--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<app-task-list></app-task-list>
+<div class="col-md-3">
+    <app-task-list></app-task-list>
+</div>
+<div class="col-md-9">
+  <app-calendar></app-calendar>
+</div>
