--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,8 @@
-<p>
-  calendar works!
-</p>
+<div class="row">
+  <div class="col-md-9">
+    <div class="container">
+      <h3> Calendar </h3>
+      <p *ngFor="let item of tasks"> {{ item.description }}</p>
+    </div>
+  </div>
+</div>
