--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -4,5 +4,6 @@
       <h3> Calendar </h3>
       <p *ngFor="let item of tasks"> {{ item.description }}</p>
     </div>
+    <div></div>
   </div>
 </div>
