--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,8 +2,7 @@
   <div class="col-md-9">
     <div class="container">
       <h3> Calendar </h3>
-      <p *ngFor="let item of tasks"> {{ item.description }}</p>
+      <p> {{ task.description }} {{ task.time}}</p>
     </div>
-    <div></div>
   </div>
 </div>
