--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 <div class="col-md-3">
-    <app-task-list></app-task-list>
+    <app-task-list (taskWasSelected)="selectedTask = $event">"></app-task-list>
 </div>
 <div class="col-md-9">
-  <app-calendar></app-calendar>
+  <app-calendar
+    [task]="selectedTask"
+  ></app-calendar>
 </div>
