--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,11 +1,8 @@
 <div class="row">
   <div class="container-fluid">
     <div class="center">
-      <h3> Assignment List </h3>
-      <hr>
-      <input type="text" class="form-control"[(ngModel)]="taskName_1">
-      <hr>
-      <input type="text" class="form-control" [(ngModel)]="taskName_2">
+      <app-task-edit
+      (taskAdded)="onAddedTask($event)"></app-task-edit>
     </div>
   </div>
 </div>
