--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-header></app-header>
+<app-sign-in *ngIf="signed_in === 'false'"></app-sign-in>
+
 <div class="col-md-3">
-    <app-task-list (taskWasSelected)="selectedTask = $event">"></app-task-list>
+    <app-task-list *ngIf="signed_in !== 'false'"(taskWasSelected)="selectedTask = $event">"></app-task-list>
 </div>
 <div class="col-md-9">
   <app-calendar
+    *ngIf="signed_in !== 'false'"
     [task]="selectedTask"
   ></app-calendar>
 </div>
