--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,21 @@
-<nav class="navbar navbar-default" style="background-color: rgba(0, 232, 255, 0.28)">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <ul>
-        <a href="#" class="navbar-brand"> UniMe </a>
-        <a href="#" class="btn btn-info btn-lg">
-          <span class="glyphicon-plus"></span>
-        </a>
+<nav class="navbar fixed-top bg-success">
+  <div class="container">
+    <a href="#" class="navbar-brand">UniMe</a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="#home" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Settings</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Sign Out</a>
+        </li>
       </ul>
     </div>
-
-    <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" role="button"> Manage <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#"> Profile </a></li>
-          <li><a href="#"> Settings </a></li>
-          <li><a href="#"> Sign Out </a></li>
-        </ul>
-      </li>
-    </ul>
-
   </div>
 </nav>
