--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
-<header>
+<header id="home-section">
   <div class="dark-overlay">
-    <div class="home-inner bg-primary">
+    <div class="home-inner bg-info">
       <div class="container">
         <div class="row">
 
@@ -18,7 +18,7 @@
           </div>
 
           <div class="col-md-4">
-            <div class="card bg-dark text-center card-form">
+            <div class="card bg-primary text-center card-form">
               <div class="card-body">
                 <h3>Sign up Today</h3>
                 <p>Please fill out this form to register</p>
