--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top bg-success">
+<nav class="navbar fixed-top">
   <div class="container">
     <a href="#" class="navbar-brand">UniMe</a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
