--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,20 @@
 <app-sign-in *ngIf="signed_in === 'false'"></app-sign-in>
 
 <div class="col-md-3">
-    <app-task-list *ngIf="signed_in !== 'false'"(taskWasSelected)="selectedTask = $event">"></app-task-list>
+    <app-task-list
+    *ngIf="signed_in !== 'false'"
+    (taskWasSelected)="selectedTask = $event"
+    (staticTaskWasSelected)="selectedStaticTask = $event"
+    ></app-task-list>
 </div>
-<div class="col-md-9">
+
+
+<div class="col-md-9 bg-info">
   <app-calendar
     *ngIf="signed_in !== 'false'"
     [task]="selectedTask"
+    [staticTask]="selectedStaticTask"
   ></app-calendar>
 </div>
+
 <app-footer></app-footer>
