--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Main Footer -->
-<footer id="main-footer" class="bg-dark">
+<!-- <footer id="main-footer" class="bg-dark">
   <div class="container">
     <div class="row">
       <div class="col text-center">
@@ -14,7 +14,7 @@
 </footer>
 
 <!-- Contact Modal -->
-<div class="modal fade text-dark" id="contactModal">
+<!-- <div class="modal fade text-dark" id="contactModal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -30,8 +30,8 @@
           <div class="form-group">
             <label for="email">Email</label>
             <input type="text" class="form-control">
-          </div>
-          <div class="form-group">
+          </div> -->
+          <!-- <div class="form-group">
             <label for="name">Message</label>
             <textarea type="text" class="form-control"></textarea>
           </div>
@@ -44,4 +44,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> --> 
