--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,8 +1,15 @@
-<div class="row">
-  <div class="container-fluid">
-    <div class="center">
-      <app-task-edit
-      (taskAdded)="onAddedTask($event)"></app-task-edit>
-    </div>
+<div class="card">
+  <div class="card card-header">
+    <app-task-list-header (featureClicked)="onNavigate($event)"></app-task-list-header>
   </div>
+  <div class="card body">
+    <app-task-flex
+      (taskAdded)="onAddedTask($event)"
+      *ngIf="loadedFeature === 'flexible' "
+    ></app-task-flex>
+  </div>
+    <app-task-static
+      (staticTaskAdded)="onStaticAddedTask($event)"
+      *ngIf="loadedFeature !== 'flexible'"
+    ></app-task-static>
 </div>
